--- a/Prep 4/wireframe.html
+++ b/Prep 4/wireframe.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 
- <center><h1>Magic 8 Ball</h1></center>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
+    <h1>Magic 8 Ball</h1>
+</header>
     <img src="https://place-hold.it/650x650/ddd" />
-   <center><button>Ask Me Anything!</button></center> 
+   <button>Ask Me Anything!</button>
 </body>
 </html>
