added some CSS/renamed some HTML elements for CSS

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <header>
         <h1>Magic 8 Ball</h1>
     </header>
-    <div id="8ballAnswer">
-        <p id="answer"></p>
+    <div id="eightBall">
+        <p id="answer">
+            css testing
+        </p>
 
-        <img src="img/8ball.jpg/" />
+        <img src="img/8ball.jpg" alt="regular 8 ball">
     </div>
 
     <div id="answerButton">
