--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
 
@@ -13,18 +16,20 @@
     <header>
         <h1>Magic 8 Ball</h1>
     </header>
-    <div id="eightBall">
+    <div id="eightBall" class="answer">
         <p id="answer">
             css testing
         </p>
 
-        <img src="img/8ball.jpg" alt="regular 8 ball">
+        <img id="8ball" src="img/8ball.jpg" alt="regular 8 ball">
     </div>
 
-    <div id="answerButton">
-        <button>Ask Me Anything!</button>
+    <br><br>
+
+    <div class= "button">
+        <button id= "answerButton"> Ask Me Anything!</button>
     </div>
-    <script src="script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     
 </body>
 
